# FastAPI-SQLAlchemy-Docker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  template.env
alembic/: env.py
alembic/versions/: 2c035b51b708_.py  426b5bce2095_.py  469ec65149e4_.py  4c5e54b39a55_.py  9ef4f0f3bba5_.py  cd5e0d26eb97_seed_data.py
app/: main.py  pre_config.py
app/core/: logger.py
app/core/db/: seeder.py  session.py
app/ecommerce/v1/: __init__.py  models.py  schema.py  views.py
app/tests/: test_ecommerce.py
